--- a/.github/workflows/CODECOV.yml
+++ b/.github/workflows/CODECOV.yml
@@ -1,4 +1,30 @@
-- name: Upload coverage reports to Codecov
-  uses: codecov/codecov-action@v3
-  env:
-    CODECOV_TOKEN: 085b923a-3ca3-4e1f-9649-0366df11f16d
+name: Codecov
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '3.1' # 替换为你想要使用的 .NET Core 版本
+      
+      - name: Restore dependencies
+        run: dotnet restore
+      
+      - name: Build and test
+        run: dotnet build --configuration Release && dotnet test --no-restore --verbosity normal
+      
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: 085b923a-3ca3-4e1f-9649-0366df11f16d
