--- a/.github/workflows/CODECOV.yml
+++ b/.github/workflows/CODECOV.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '3.1' # 替换为你想要使用的 .NET Core 版本
+          dotnet-version: '3.1.32' 
       
       - name: Restore dependencies
         run: dotnet restore
